--- a/server/config/config.json
+++ b/server/config/config.json
@@ -1,8 +1,8 @@
 {
   "development": {
     "username": "root",
-    "password": null,
-    "database": "database_development",
+    "password": "Jug0denaranj@",
+    "database": "tutorialdb",
     "host": "127.0.0.1",
     "dialect": "mysql"
   },
